--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cookie-parser": "1.4.4",
     "cross-env": "^7.0.2",
     "csurf": "1.10.0",
+    "dotenv": "^8.2.0",
     "errorhandler": "1.5.1",
     "express": "4.17.1",
     "express-fileupload": "^0.4.0",
