--- a/.tikici.yml
+++ b/.tikici.yml
@@ -33,7 +33,7 @@ workflows:
             branches:
               only:
                 - dev
-                - main
+                - master
       - publish_docker:
           requires:
             - build_docker
@@ -41,7 +41,7 @@ workflows:
             branches:
               only:
                 - dev
-                - main
+                - master
       - deploy_dev:
           requires:
             - publish_docker
@@ -55,7 +55,7 @@ workflows:
           filters:
             branches:
               only:
-                - main
+                - master
 deployment_config:
   dev:
     ingress:
@@ -64,7 +64,6 @@ deployment_config:
           paths:
             - path: /
               port: '8081'
-    replicaCount: 1
   prod:
     ingress:
       hosts:
@@ -72,4 +71,3 @@ deployment_config:
           paths:
             - path: /
               port: '8081'
-    replicaCount: 1
